Adjusted views to not use margin constraints, to support iOS 7

--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -315,27 +315,27 @@
                             <constraint firstItem="1dB-Id-suO" firstAttribute="leading" secondItem="pBE-h6-56e" secondAttribute="trailing" constant="1" id="1GK-dj-x8d"/>
                             <constraint firstItem="Dge-3Q-dJ9" firstAttribute="top" relation="greaterThanOrEqual" secondItem="bAh-Wf-9CL" secondAttribute="bottom" constant="10" id="2DM-6F-k0J"/>
                             <constraint firstItem="lKc-B9-s3P" firstAttribute="bottom" secondItem="1dB-Id-suO" secondAttribute="bottom" id="2WS-D6-vv7"/>
-                            <constraint firstItem="waJ-n9-LAg" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="3Kc-0s-7fu"/>
-                            <constraint firstItem="lKc-B9-s3P" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="3Ku-AQ-lRe"/>
+                            <constraint firstItem="waJ-n9-LAg" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="3Kc-0s-7fu"/>
                             <constraint firstItem="1dS-bJ-7pt" firstAttribute="leading" secondItem="esr-r2-Iz8" secondAttribute="trailing" constant="56" id="3si-b5-Wak"/>
-                            <constraint firstItem="1BW-wG-NGv" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="9l7-nL-waP"/>
-                            <constraint firstItem="1dS-bJ-7pt" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="CCd-yo-vEj"/>
-                            <constraint firstItem="esr-r2-Iz8" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="DGQ-yk-JuA"/>
+                            <constraint firstItem="1BW-wG-NGv" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="9l7-nL-waP"/>
+                            <constraint firstItem="1dS-bJ-7pt" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailing" constant="-16" id="CCd-yo-vEj"/>
+                            <constraint firstItem="esr-r2-Iz8" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="DGQ-yk-JuA"/>
                             <constraint firstItem="2cN-Oz-7Hd" firstAttribute="leading" secondItem="L9C-Eb-VC4" secondAttribute="trailing" id="Djh-bi-2B0"/>
                             <constraint firstItem="1dB-Id-suO" firstAttribute="baseline" secondItem="pBE-h6-56e" secondAttribute="baseline" id="EDL-RD-Hsb"/>
-                            <constraint firstItem="bAh-Wf-9CL" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-16" id="F0B-xm-ndG"/>
+                            <constraint firstItem="bAh-Wf-9CL" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="F0B-xm-ndG"/>
                             <constraint firstItem="lKc-B9-s3P" firstAttribute="leading" secondItem="yct-6o-EDv" secondAttribute="trailing" constant="5" id="Jh6-Ur-DFq"/>
-                            <constraint firstItem="bAh-Wf-9CL" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="KYY-d8-gXa"/>
-                            <constraint firstItem="waJ-n9-LAg" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="Qid-ZX-g85"/>
+                            <constraint firstItem="bAh-Wf-9CL" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="KYY-d8-gXa"/>
+                            <constraint firstItem="waJ-n9-LAg" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="Qid-ZX-g85"/>
                             <constraint firstItem="qtf-eg-0ZR" firstAttribute="bottom" secondItem="2cN-Oz-7Hd" secondAttribute="bottom" id="Qz4-MV-7X7"/>
                             <constraint firstAttribute="centerX" secondItem="2cN-Oz-7Hd" secondAttribute="centerX" id="Ri4-08-pka"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="waJ-n9-LAg" secondAttribute="trailing" constant="-16" id="WVg-rg-rFy"/>
+                            <constraint firstAttribute="trailing" secondItem="waJ-n9-LAg" secondAttribute="trailing" id="WVg-rg-rFy"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="waJ-n9-LAg" secondAttribute="bottom" id="XfE-BQ-MGC"/>
-                            <constraint firstItem="pBE-h6-56e" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="8" id="Z8R-0s-RkG"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="1BW-wG-NGv" secondAttribute="trailing" constant="-16" id="abs-5N-t0h"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bAh-Wf-9CL" secondAttribute="trailing" constant="-16" id="adl-bK-rex"/>
+                            <constraint firstItem="pBE-h6-56e" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="8" id="Z8R-0s-RkG"/>
+                            <constraint firstAttribute="trailing" secondItem="1BW-wG-NGv" secondAttribute="trailing" id="abs-5N-t0h"/>
+                            <constraint firstAttribute="trailing" secondItem="bAh-Wf-9CL" secondAttribute="trailing" id="adl-bK-rex"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="1dS-bJ-7pt" secondAttribute="bottom" constant="12" id="csw-pq-AfJ"/>
                             <constraint firstItem="qtf-eg-0ZR" firstAttribute="leading" secondItem="2cN-Oz-7Hd" secondAttribute="trailing" id="e19-gu-PAH"/>
+                            <constraint firstAttribute="trailing" secondItem="lKc-B9-s3P" secondAttribute="trailing" constant="16" id="fJ7-WC-NtP"/>
                             <constraint firstItem="1BW-wG-NGv" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Dge-3Q-dJ9" secondAttribute="bottom" constant="10" id="i3Y-UR-Cnc"/>
                             <constraint firstItem="yct-6o-EDv" firstAttribute="bottom" secondItem="1dB-Id-suO" secondAttribute="bottom" constant="-6" id="raY-o5-7CP"/>
                             <constraint firstAttribute="centerY" secondItem="2cN-Oz-7Hd" secondAttribute="centerY" constant="-0.5" id="uaG-Cq-brX"/>
@@ -345,7 +345,7 @@
                             <constraint firstAttribute="centerY" secondItem="iSV-ic-TLJ" secondAttribute="centerY" id="xVd-bJ-5d4"/>
                             <constraint firstItem="1dB-Id-suO" firstAttribute="firstBaseline" secondItem="pBE-h6-56e" secondAttribute="firstBaseline" id="xXb-Xs-g4t"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="1BW-wG-NGv" secondAttribute="bottom" id="yZN-0b-WNV"/>
-                            <constraint firstItem="pBE-h6-56e" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="zZ3-cl-shH"/>
+                            <constraint firstItem="pBE-h6-56e" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="zZ3-cl-shH"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1599,8 +1599,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="894-fV-ljj"/>
         <segue reference="i1N-E3-qx4"/>
-        <segue reference="uqD-jD-qTx"/>
         <segue reference="jc4-iH-A1a"/>
         <segue reference="dpd-fJ-gwS"/>
     </inferredMetricsTieBreakers>
