--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -120,12 +119,12 @@
                             </view>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="eMA-tx-xYX" firstAttribute="leading" secondItem="Hly-b4-he7" secondAttribute="leadingMargin" constant="-16" id="6q6-9U-Bgo"/>
+                            <constraint firstItem="eMA-tx-xYX" firstAttribute="leading" secondItem="Hly-b4-he7" secondAttribute="leading" id="6q6-9U-Bgo"/>
                             <constraint firstItem="IbZ-sC-RCj" firstAttribute="top" secondItem="eMA-tx-xYX" secondAttribute="bottom" constant="230" id="EoD-6f-J7x"/>
-                            <constraint firstItem="jwy-3d-SEJ" firstAttribute="leading" secondItem="Hly-b4-he7" secondAttribute="leadingMargin" constant="-16" id="ZCN-I1-Kxx"/>
+                            <constraint firstItem="jwy-3d-SEJ" firstAttribute="leading" secondItem="Hly-b4-he7" secondAttribute="leading" id="ZCN-I1-Kxx"/>
                             <constraint firstItem="IbZ-sC-RCj" firstAttribute="top" secondItem="jwy-3d-SEJ" secondAttribute="bottom" id="fNE-9y-cyJ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="eMA-tx-xYX" secondAttribute="trailing" constant="-16" id="iz3-GV-MF8"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="jwy-3d-SEJ" secondAttribute="trailing" constant="-16" id="nBK-Y2-aLY"/>
+                            <constraint firstAttribute="trailing" secondItem="eMA-tx-xYX" secondAttribute="trailing" id="iz3-GV-MF8"/>
+                            <constraint firstAttribute="trailing" secondItem="jwy-3d-SEJ" secondAttribute="trailing" id="nBK-Y2-aLY"/>
                             <constraint firstItem="eMA-tx-xYX" firstAttribute="top" secondItem="4eJ-sR-rCh" secondAttribute="bottom" constant="-20" id="vIN-tC-ZFK"/>
                             <constraint firstItem="jwy-3d-SEJ" firstAttribute="top" secondItem="4eJ-sR-rCh" secondAttribute="bottom" constant="-20" id="wi5-pF-fwz"/>
                         </constraints>
@@ -343,7 +342,7 @@
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="esr-r2-Iz8" secondAttribute="bottom" constant="8" id="vb6-Vd-aYs"/>
                             <constraint firstAttribute="centerX" secondItem="iSV-ic-TLJ" secondAttribute="centerX" id="vw0-QM-A0q"/>
                             <constraint firstAttribute="centerY" secondItem="iSV-ic-TLJ" secondAttribute="centerY" id="xVd-bJ-5d4"/>
-                            <constraint firstItem="1dB-Id-suO" firstAttribute="firstBaseline" secondItem="pBE-h6-56e" secondAttribute="firstBaseline" id="xXb-Xs-g4t"/>
+                            <constraint firstItem="1dB-Id-suO" firstAttribute="baseline" secondItem="pBE-h6-56e" secondAttribute="baseline" id="xXb-Xs-g4t"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="1BW-wG-NGv" secondAttribute="bottom" id="yZN-0b-WNV"/>
                             <constraint firstItem="pBE-h6-56e" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="zZ3-cl-shH"/>
                         </constraints>
@@ -433,23 +432,23 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jti-c5-2Wo">
-                                                    <rect key="frame" x="258" y="6" width="51" height="31"/>
+                                                    <rect key="frame" x="256" y="6" width="51" height="31"/>
                                                     <connections>
                                                         <action selector="blinkSecondsMarkerSettingChanged:" destination="AeY-Tb-n7l" eventType="valueChanged" id="93s-cL-xJe"/>
                                                     </connections>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blink Seconds Marker" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="chI-DU-hi7">
-                                                    <rect key="frame" x="16" y="12" width="210" height="21"/>
+                                                    <rect key="frame" x="16" y="12" width="208" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="centerY" secondItem="chI-DU-hi7" secondAttribute="centerY" constant="-0.5" id="8F1-93-uok"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="Jti-c5-2Wo" secondAttribute="trailing" constant="5" id="nn8-2n-5kc"/>
+                                                <constraint firstAttribute="trailing" secondItem="Jti-c5-2Wo" secondAttribute="trailing" constant="15" id="nn8-2n-5kc"/>
                                                 <constraint firstItem="Jti-c5-2Wo" firstAttribute="leading" secondItem="chI-DU-hi7" secondAttribute="trailing" constant="32" id="vuG-c4-IYP"/>
                                                 <constraint firstAttribute="centerY" secondItem="Jti-c5-2Wo" secondAttribute="centerY" id="xMK-R5-bhx"/>
-                                                <constraint firstItem="chI-DU-hi7" firstAttribute="leading" secondItem="m1D-ws-78m" secondAttribute="leadingMargin" constant="8" id="zGy-vM-Me7"/>
+                                                <constraint firstItem="chI-DU-hi7" firstAttribute="leading" secondItem="m1D-ws-78m" secondAttribute="leading" constant="16" id="zGy-vM-Me7"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -461,21 +460,21 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kCR-PN-1il">
-                                                    <rect key="frame" x="258" y="6" width="51" height="31"/>
+                                                    <rect key="frame" x="256" y="6" width="51" height="31"/>
                                                     <connections>
                                                         <action selector="showBackgroundGlowSettingChanged:" destination="AeY-Tb-n7l" eventType="valueChanged" id="YIb-0p-fQT"/>
                                                     </connections>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show Background Glow" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHi-p9-mYf">
-                                                    <rect key="frame" x="16" y="13" width="210" height="21"/>
+                                                    <rect key="frame" x="16" y="13" width="208" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="uHi-p9-mYf" firstAttribute="leading" secondItem="buD-pE-Gpv" secondAttribute="leadingMargin" constant="8" id="AWW-18-kUR"/>
+                                                <constraint firstItem="uHi-p9-mYf" firstAttribute="leading" secondItem="buD-pE-Gpv" secondAttribute="leading" constant="16" id="AWW-18-kUR"/>
                                                 <constraint firstAttribute="centerY" secondItem="kCR-PN-1il" secondAttribute="centerY" id="L7N-xC-oMX"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="kCR-PN-1il" secondAttribute="trailing" constant="5" id="XHY-oV-59R"/>
+                                                <constraint firstAttribute="trailing" secondItem="kCR-PN-1il" secondAttribute="trailing" constant="15" id="XHY-oV-59R"/>
                                                 <constraint firstItem="kCR-PN-1il" firstAttribute="leading" secondItem="uHi-p9-mYf" secondAttribute="trailing" constant="32" id="YgY-6C-fR5"/>
                                                 <constraint firstAttribute="centerY" secondItem="uHi-p9-mYf" secondAttribute="centerY" constant="-1.5" id="nXg-rC-uGT"/>
                                             </constraints>
@@ -497,7 +496,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="x4X-U4-div">
-                                                    <rect key="frame" x="144" y="8" width="164" height="31"/>
+                                                    <rect key="frame" x="144" y="8" width="163" height="31"/>
                                                     <color key="tintColor" red="0.094117647058823528" green="0.42745098039215684" blue="0.15294117647058825" alpha="1" colorSpace="calibratedRGB"/>
                                                     <connections>
                                                         <action selector="maxVolumeSettingChanged:" destination="AeY-Tb-n7l" eventType="valueChanged" id="Lzf-Vw-xqj"/>
@@ -508,8 +507,8 @@
                                                 <constraint firstAttribute="centerY" secondItem="lTI-cC-Dcn" secondAttribute="centerY" constant="-2" id="8NJ-A0-Aa2"/>
                                                 <constraint firstAttribute="centerY" secondItem="x4X-U4-div" secondAttribute="centerY" constant="-1" id="ZP5-qI-iyC"/>
                                                 <constraint firstItem="x4X-U4-div" firstAttribute="leading" secondItem="lTI-cC-Dcn" secondAttribute="trailing" constant="20" id="fLz-Q9-7IA"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="x4X-U4-div" secondAttribute="trailing" constant="6" id="mzU-sF-jzm"/>
-                                                <constraint firstItem="lTI-cC-Dcn" firstAttribute="leading" secondItem="mdV-Vj-wud" secondAttribute="leadingMargin" constant="8" id="swj-iv-VcS"/>
+                                                <constraint firstAttribute="trailing" secondItem="x4X-U4-div" secondAttribute="trailing" constant="15" id="mzU-sF-jzm"/>
+                                                <constraint firstItem="lTI-cC-Dcn" firstAttribute="leading" secondItem="mdV-Vj-wud" secondAttribute="leading" constant="16" id="swj-iv-VcS"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -529,7 +528,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="CJK-oh-5Kx">
-                                                    <rect key="frame" x="144" y="8" width="164" height="31"/>
+                                                    <rect key="frame" x="144" y="8" width="163" height="31"/>
                                                     <color key="tintColor" red="0.094117647058823528" green="0.42745098039215684" blue="0.15294117647058825" alpha="1" colorSpace="calibratedRGB"/>
                                                     <connections>
                                                         <action selector="brightnessSettingChanged:" destination="AeY-Tb-n7l" eventType="valueChanged" id="FHc-Nb-ch2"/>
@@ -537,8 +536,8 @@
                                                 </slider>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="CJK-oh-5Kx" secondAttribute="trailing" constant="6" id="6sg-Fh-g6a"/>
-                                                <constraint firstItem="1IT-HD-Qug" firstAttribute="leading" secondItem="ENH-cz-ayJ" secondAttribute="leadingMargin" constant="8" id="KaR-53-pI7"/>
+                                                <constraint firstAttribute="trailing" secondItem="CJK-oh-5Kx" secondAttribute="trailing" constant="15" id="6sg-Fh-g6a"/>
+                                                <constraint firstItem="1IT-HD-Qug" firstAttribute="leading" secondItem="ENH-cz-ayJ" secondAttribute="leading" constant="16" id="KaR-53-pI7"/>
                                                 <constraint firstAttribute="centerY" secondItem="1IT-HD-Qug" secondAttribute="centerY" constant="-1.5" id="NMq-fe-As2"/>
                                                 <constraint firstItem="CJK-oh-5Kx" firstAttribute="leading" secondItem="1IT-HD-Qug" secondAttribute="trailing" constant="20" id="lSp-xH-ZhD"/>
                                                 <constraint firstAttribute="centerY" secondItem="CJK-oh-5Kx" secondAttribute="centerY" constant="-1.5" id="w2s-aN-fRH"/>
@@ -1311,14 +1310,6 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="NVx-JE-31Z">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NVx-JE-31Z" id="1yX-Hl-zHB">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="moy-Xe-ReM" id="6tQ-0T-ClO"/>
                             <outlet property="delegate" destination="moy-Xe-ReM" id="aFP-f6-hGf"/>
@@ -1599,9 +1590,9 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="894-fV-ljj"/>
         <segue reference="i1N-E3-qx4"/>
+        <segue reference="uqD-jD-qTx"/>
+        <segue reference="odI-h1-XeF"/>
         <segue reference="jc4-iH-A1a"/>
-        <segue reference="dpd-fJ-gwS"/>
     </inferredMetricsTieBreakers>
 </document>
