--- a/SpotifyAlarmClock/Base.lproj/Main.storyboard
+++ b/SpotifyAlarmClock/Base.lproj/Main.storyboard
@@ -424,6 +424,32 @@
                                             <segue destination="lME-u5-qJS" kind="push" id="paw-rX-l7i"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="Z7E-e1-oRL" detailTextLabel="22T-lh-lKB" style="IBUITableViewCellStyleValue1" id="E5a-UO-M3z">
+                                        <rect key="frame" x="0.0" y="99" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E5a-UO-M3z" id="xHk-Oo-fAS">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Background Alarms" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Z7E-e1-oRL">
+                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="On" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="22T-lh-lKB">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="19C-TT-mfE" kind="push" id="de0-Jc-eOK"/>
+                                        </connections>
+                                    </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="YcV-JV-CZN">
                                         <rect key="frame" x="0.0" y="187" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
@@ -652,6 +678,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="lbBackgroundAlarmsState" destination="22T-lh-lKB" id="LOE-Ld-ws0"/>
                         <outlet property="lbSpotifyConnectionState" destination="2Tz-qh-Zb5" id="On3-fH-wxX"/>
                         <outlet property="slBrightness" destination="CJK-oh-5Kx" id="j45-Gg-65L"/>
                         <outlet property="slMaxVolume" destination="x4X-U4-div" id="TdP-rE-8Eu"/>
@@ -878,6 +905,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rvo-LS-Q8Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2230" y="401"/>
+        </scene>
+        <!--Background Alarms-->
+        <scene sceneID="e1D-jR-ipa">
+            <objects>
+                <tableViewController id="19C-TT-mfE" customClass="BackgroundAlarmsViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="GmL-Ys-lMs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <textView key="tableFooterView" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Background alarms explanation." selectable="NO" id="Dje-D9-dKF">
+                            <rect key="frame" x="0.0" y="89" width="320" height="300"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="textColor" red="0.58542080026455023" green="0.58542080026455023" blue="0.58542080026455023" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
+                        <sections>
+                            <tableViewSection id="tsi-VQ-DPo">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="hcp-bw-Cw0">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hcp-bw-Cw0" id="JJy-Im-dw9">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Background Alarms" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tfo-zd-OOk">
+                                                    <rect key="frame" x="16" y="11" width="208" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hnx-Tn-dfU">
+                                                    <rect key="frame" x="256" y="6" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="backgroundAlarmsSwitchChanged:" destination="19C-TT-mfE" eventType="valueChanged" id="Fo2-Ud-qqG"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Tfo-zd-OOk" firstAttribute="leading" secondItem="JJy-Im-dw9" secondAttribute="leading" constant="16" id="GXa-nQ-HpB"/>
+                                                <constraint firstItem="hnx-Tn-dfU" firstAttribute="leading" secondItem="Tfo-zd-OOk" secondAttribute="trailing" constant="32" id="HnU-25-FDV"/>
+                                                <constraint firstAttribute="centerY" secondItem="hnx-Tn-dfU" secondAttribute="centerY" id="I0R-g4-Hx9"/>
+                                                <constraint firstAttribute="centerY" secondItem="Tfo-zd-OOk" secondAttribute="centerY" id="Uhr-x7-zeq"/>
+                                                <constraint firstItem="hnx-Tn-dfU" firstAttribute="trailing" secondItem="JJy-Im-dw9" secondAttribute="trailing" constant="-15" id="xcE-p1-FDM"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="19C-TT-mfE" id="KYk-W9-Fft"/>
+                            <outlet property="delegate" destination="19C-TT-mfE" id="ha2-t2-GWC"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Background Alarms" id="oiE-hX-JSP"/>
+                    <connections>
+                        <outlet property="swBackgroundAlarms" destination="hnx-Tn-dfU" id="uBH-Wf-3KO"/>
+                        <outlet property="txtBackgroundAlarms" destination="Dje-D9-dKF" id="yhV-7W-52W"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O4l-FQ-qs2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2682" y="633"/>
         </scene>
         <!--Options Select View Controller-->
         <scene sceneID="Fty-ou-TWg">
@@ -1590,8 +1680,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="cEW-bu-nuH"/>
         <segue reference="i1N-E3-qx4"/>
-        <segue reference="uqD-jD-qTx"/>
         <segue reference="odI-h1-XeF"/>
         <segue reference="jc4-iH-A1a"/>
     </inferredMetricsTieBreakers>
